--- a/login/css/style.css
+++ b/login/css/style.css
@@ -30,8 +30,61 @@ body{
 
 }
 .card-login{
-    
-}
-.rigth-login > h1{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    background: #2f2841;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #00000056;
 
+}
+.card-login > h1{
+    color:#00ff88 ;
+    font-weight: 800;
+    margin: 0;
+}
+
+.textfilde{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 4px 0px;
+}
+.textfilde > input{
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background:#514869 ;
+    color: #f0ffffde;
+    font-size: 12pt;
+    box-shadow: 0px 10px 40px #00000056;
+    outline: none;
+    box-sizing: border-box;
+}
+.textfilde > label{
+    color: #f0ffffde;
+    margin-bottom: 10px;
+}
+.textfilde > input::placeholder{
+    color: #f0ffff94;
+}
+.btn-login{
+    width: 100%;
+    padding: 16px 0px;
+    margin: 25px;
+    border: none;
+    border-radius: 7px;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 3px;
+    color: #2b134b;
+    background: #00ff88;
+    cursor: pointer;
+    box-shadow: ;
 }
