--- a/login/css/style.css
+++ b/login/css/style.css
@@ -86,5 +86,5 @@ body{
     color: #2b134b;
     background: #00ff88;
     cursor: pointer;
-    box-shadow: ;
+    box-shadow: 0px 10px 40px #201b2c;
 }
