--- a/login/css/style.css
+++ b/login/css/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+
 body{
     margin: 0;
+    font-family: 'Noto Sans', sans-serif;
 }
 .main-login{
     width: 100wv;
@@ -86,5 +89,5 @@ body{
     color: #2b134b;
     background: #00ff88;
     cursor: pointer;
-    box-shadow: 0px 10px 40px #201b2c;
+    box-shadow: 0px 10px 40px -12px #00ff8052;
 }
