--- a/login/css/style.css
+++ b/login/css/style.css
@@ -23,7 +23,9 @@ body{
 }
 .left-login >h1{
     color: #77ffc0;
+    font-size: 3vw;
 }
+
 .left-login-img{
     width: 45vw;
 }
@@ -33,6 +35,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 
 }
 .card-login{
@@ -94,4 +97,27 @@ body{
     background: #00ff88;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
+@media only sceen and (max-width: 950px){
+    .card-login{
+        width: 85%;
+    }
+}
+
+@media only sceen and (max-width: 600px){
+    .main-login{
+        flex-direction: column;
+    }
+    .left-login > h1{
+        display: nome;
+    }
+    .left-login{
+        width: 100%;
+        height: auto;
+    }
+    .rigth-login{
+        width: 100%;
+        height: auto;
+    }
 }
